--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 volumes:
+  postgres_local_data:
   # server_node_modules:
   # web_node_modules:
 
@@ -15,9 +16,11 @@ services:
     volumes:
       - ./server/:/app/
       # - server_node_modules:/app/node_modules
-    networks:
-      - forum
+    # networks:
+    #   - forum
     links:
+      - db
+    depends_on:
       - db
 
   db:
@@ -32,8 +35,8 @@ services:
       - 5432:5432
     volumes:
       - postgres_local_data:/var/lib/postgresql/data
-    networks:
-      - forum
+    # networks:
+    #   - forum
 
   adminer:
     image: adminer
@@ -54,7 +57,6 @@ services:
   #     - web_node_modules:/app/node_modules
   #   networks:
   #     - forum
-
-networks:
-  forum:
-    driver: bridge
+# networks:
+#   forum:
+#     driver: bridge
