--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "nestjs-paginate": "^8.6.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
