--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "@mui/x-data-grid": "^6.19.2",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.50.0"
   },
   "devDependencies": {
     "@types/node": "^20",
