refactor dtos for swagger documentation

--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "server",
-  "version": "0.0.1",
+  "name": "web-quiz-api",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^7.2.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "nestjs-paginate": "^8.6.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
