--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "web-quiz-app",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --port=3001",
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material-nextjs": "^5.15.6",
     "@mui/x-data-grid": "^6.19.2",
+    "dotenv": "^16.4.1",
     "jotai": "^2.6.4",
     "next": "14.1.0",
     "react": "^18",
