--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 volumes:
   postgres_local_data:
-  # server_node_modules:
-  # web_node_modules:
+  server_node_modules:
+  web_node_modules:
 
 services:
   server:
@@ -15,13 +15,27 @@ services:
       - '3000:3000'
     volumes:
       - ./server/:/app/
-      # - server_node_modules:/app/node_modules
+      - server_node_modules:/app/node_modules
     networks:
       - quiz
     links:
       - db
     depends_on:
       - db
+
+  web:
+    container_name: web
+    restart: always
+    build: ./web
+    command: sh -c "npm run dev"
+    ports:
+      - 3001:3001
+    working_dir: /app
+    volumes:
+      - ./web/:/app
+      - web_node_modules:/app/node_modules
+    networks:
+      - quiz
 
   db:
     image: postgres
@@ -43,20 +57,6 @@ services:
     restart: always
     ports:
       - 8080:8080
-
-  web:
-    container_name: web
-    restart: always
-    build: ./web
-    command: sh -c "npm run dev"
-    ports:
-      - 3001:3001
-    working_dir: /app
-    volumes:
-      - ./web/:/app
-      # - web_node_modules:/app/node_modules
-    networks:
-      - quiz
 
 networks:
   quiz:
